# ddgo-backup

./: .gitignore  CLAUDE.md  README.md  main.py  pyproject.toml  run.sh
src/ddgo_backup/: __init__.py  __main__.py  api.py  crypto.py  exporter.py  main.py  models.py
tests/: conftest.py
tests/integration/: test_e2e.py
tests/unit/: test_api.py  test_crypto.py  test_exporter.py  test_main.py
